# Pintia_C-

./: CMakeLists.txt
案例7_类的继承与派生/: 6-1 客货两用车.cpp  6-2 派生类的定义和使用.cpp  6-3 派生类使用基类的成员函数.cpp  6-4 学生派生类.cpp  6-5 多重继承派生类构造函数.cpp  7-2 定义基类Point和派生类Circle，求圆的周长.cpp  7-3 师生信息管理.cpp  7-4 马会飞.cpp
案例8 类的多态性/: 6-2 Shape抽象类.cpp  6-3 从shape类派生出一个正n边形.cpp  6-4 日期类的设计与实现.cpp  7-1 分数加法运算重载.cpp  7-1 类的继承与派生.cpp  7-3 复数类的运算.cpp  7-5 2017Final进位与借位 (15 分).cpp
