cmake_minimum_required(VERSION 3.17)
project(C__HomeWork)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__HomeWork main.cpp "案例7_类的继承与派生/6-2 派生类的定义和使用.cpp" "案例7_类的继承与派生/6-3 派生类使用基类的成员函数.cpp" "案例7_类的继承与派生/6-4 学生派生类.cpp" "案例7_类的继承与派生/6-5 多重继承派生类构造函数.cpp" "案例7_类的继承与派生/7-2 定义基类Point和派生类Circle，求圆的周长.cpp" "案例7_类的继承与派生/7-3 师生信息管理.cpp" "案例7_类的继承与派生/7-1 类的继承与派生.cpp" "案例7_类的继承与派生/7-4 马会飞.cpp")